--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.545.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "rsuite": "^5.83.3",
