--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
-    "react-datepicker": "^8.7.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "rsuite": "^5.83.3",
@@ -34,6 +34,7 @@
     "@types/node": "^24.7.2",
     "@types/react": "^19.1.16",
     "@types/react-big-calendar": "^1.16.3",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
