--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "rsuite": "^5.83.3",
     "tailwind-merge": "^3.3.1"
